feat(exchange-rate): 환율 정보 기능 프론트엔드-백엔드 통합 완료 (#38)
* feat(dev-env): Improve and standardize Docker-based local development

Restructure .env.example for clarity and add new API key variables.

Update docker-compose.yml to use env_file for consistent environment variable loading across services.

Parameterize the Spring Boot datasource configuration to be injected from environment variables.

Significantly enhance README.md with a comprehensive, step-by-step guide for new developers.

Align database-related environment variables for better consistency between services.

* Update

* Update

* test(exchange-rate): 프론트엔드-백엔드 통합 테스트 완료

- Vite 프록시 설정을 환경변수로 분리 (Docker/로컬 지원)
- ExchangeRateTable에서 searchDate 파라미터 추가 (어제 날짜 사용)
- Playwright E2E 테스트 작성 및 모든 테스트 통과 (6/6)
- Docker Compose에 VITE_PROXY_TARGET 환경변수 추가

테스트 결과:
✅ 환율 정보 목록 표시
✅ 백엔드 API 데이터 로드
✅ 전일대비 변동 표시
✅ 새로고침 버튼 작동
✅ 로딩 상태 표시
✅ 에러 상태 처리

🎫 SCRUM-7

* fix(exchange-rate): 환율 차트 렌더링 문제 수정

- App.jsx에서 필드명 snake_case → camelCase 수정
  - cur_unit → curUnit
  - cur_nm → curNm
- selectedCurrency null 체크 추가

테스트 완료:
✅ USD 차트 정상 표시
✅ JPY(100) 차트 정상 표시
✅ 통계 정보 (최고가/최저가/평균가) 정상 작동
✅ 기간 선택 버튼 표시 (7일/30일/90일/1년)

🎫 SCRUM-7